--- a/Patrimonio2014/Patrimonio2014.vbproj
+++ b/Patrimonio2014/Patrimonio2014.vbproj
@@ -135,6 +135,36 @@
     <Compile Include="FormMenu\Fondi.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FormMenu\Unita.Designer.vb">
+      <DependentUpon>Unita.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormMenu\Unita.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMenu\Tabella.Designer.vb">
+      <DependentUpon>Tabella.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormMenu\Tabella.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMenu\PianoContiPreventivo.Designer.vb">
+      <DependentUpon>PianoContiPreventivo.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormMenu\PianoContiPreventivo.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMenu\PianoContiConsuntivo.Designer.vb">
+      <DependentUpon>PianoContiConsuntivo.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormMenu\PianoContiConsuntivo.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMenu\Immobili.Designer.vb">
+      <DependentUpon>Immobili.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormMenu\Immobili.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormMenu\Gruppi.Designer.vb">
       <DependentUpon>Gruppi.vb</DependentUpon>
     </Compile>
@@ -227,8 +257,23 @@
     <EmbeddedResource Include="FormMenu\Gruppi.resx">
       <DependentUpon>Gruppi.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormMenu\Immobili.resx">
+      <DependentUpon>Immobili.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMenu\Opzioni.resx">
       <DependentUpon>Opzioni.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMenu\PianoContiConsuntivo.resx">
+      <DependentUpon>PianoContiConsuntivo.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMenu\PianoContiPreventivo.resx">
+      <DependentUpon>PianoContiPreventivo.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMenu\Tabella.resx">
+      <DependentUpon>Tabella.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMenu\Unita.resx">
+      <DependentUpon>Unita.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm\LoginForm1.resx">
       <DependentUpon>LoginForm1.vb</DependentUpon>
